--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.7.9",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.6",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "final-form": "^4.20.2",
     "history": "^4.10.1",
     "imask": "^6.1.0",
@@ -11,7 +17,8 @@
     "react-final-form": "^6.5.3",
     "react-imask": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
